# NetCoreInterop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Interop.Core/: CMakeLists.txt  Interop.Core.csproj
Interop.Core/src/: GlobalUsings.cs
Interop.Core/src/Examples/: CustomObject.cs  EntryPoint.cs
InteropLib/: CMakeLists.txt
InteropLib/src/Core/: Definitions.hpp  DynamicLibrary.hpp  HostedAssembly.hpp  Memory.cpp  Memory.hpp
InteropLib/src/NetCore/: NetCoreContext.hpp  NetCoreController.cpp  NetCoreController.hpp  NetCoreVersion.cpp  NetCoreVersion.hpp
InteropLib/src/NetCore/Api/: ExampleApi.cpp  ExampleApi.hpp
InteropLib/src/Platform/: Platform.hpp  PlatformUnix.cpp  PlatformWin32.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Main.cpp
Sandbox/src/Examples/: CustomObject.hpp
